--- a/Produktkatalog/Produktkatalog.csproj
+++ b/Produktkatalog/Produktkatalog.csproj
@@ -6,16 +6,21 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <Configurations>Debug;Release;Produkt</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resource\Dial.png" />
-    <None Remove="Resource\th.jpg" />
+    <None Remove="Resources\Dial.png" />
+    <None Remove="Resources\th.jpg" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resource\Dial.png" />
-    <Resource Include="Resource\th.jpg" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Dial.png" />
+    <Resource Include="Resources\th.jpg" />
   </ItemGroup>
 
 </Project>
