--- a/Produktkatalog/Produktkatalog.csproj
+++ b/Produktkatalog/Produktkatalog.csproj
@@ -10,6 +10,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\1.1.png" />
+    <None Remove="Resources\1.2.png" />
+    <None Remove="Resources\10.1.png" />
+    <None Remove="Resources\10.2.png" />
+    <None Remove="Resources\11.1.png" />
+    <None Remove="Resources\11.2.png" />
+    <None Remove="Resources\2.1.png" />
+    <None Remove="Resources\2.2.png" />
+    <None Remove="Resources\3.1.png" />
+    <None Remove="Resources\3.2.png" />
+    <None Remove="Resources\4.1.png" />
+    <None Remove="Resources\4.2.png" />
+    <None Remove="Resources\5.1.png" />
+    <None Remove="Resources\5.2.png" />
+    <None Remove="Resources\6.1.png" />
+    <None Remove="Resources\6.2.png" />
+    <None Remove="Resources\7.1.png" />
+    <None Remove="Resources\7.2.png" />
+    <None Remove="Resources\8.1.png" />
+    <None Remove="Resources\8.2.png" />
+    <None Remove="Resources\9.1.png" />
+    <None Remove="Resources\9.2.png" />
     <None Remove="Resources\Dial.png" />
     <None Remove="Resources\th.jpg" />
   </ItemGroup>
@@ -19,8 +41,29 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\1.1.png" />
+    <Resource Include="Resources\1.2.png" />
+    <Resource Include="Resources\10.1.png" />
+    <Resource Include="Resources\10.2.png" />
+    <Resource Include="Resources\11.1.png" />
+    <Resource Include="Resources\11.2.png" />
+    <Resource Include="Resources\2.1.png" />
+    <Resource Include="Resources\2.2.png" />
+    <Resource Include="Resources\3.1.png" />
+    <Resource Include="Resources\3.2.png" />
+    <Resource Include="Resources\4.1.png" />
+    <Resource Include="Resources\4.2.png" />
+    <Resource Include="Resources\5.1.png" />
+    <Resource Include="Resources\5.2.png" />
+    <Resource Include="Resources\6.1.png" />
+    <Resource Include="Resources\6.2.png" />
+    <Resource Include="Resources\7.1.png" />
+    <Resource Include="Resources\7.2.png" />
+    <Resource Include="Resources\8.1.png" />
+    <Resource Include="Resources\8.2.png" />
+    <Resource Include="Resources\9.1.png" />
+    <Resource Include="Resources\9.2.png" />
     <Resource Include="Resources\Dial.png" />
-    <Resource Include="Resources\th.jpg" />
   </ItemGroup>
 
 </Project>
