--- a/Produktkatalog/Produktkatalog.csproj
+++ b/Produktkatalog/Produktkatalog.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="View\DetailView.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Resources\1.1.png" />
     <None Remove="Resources\1.2.png" />
     <None Remove="Resources\10.1.png" />
@@ -37,6 +41,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Remove="View\DetailView.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="17.12.40391" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
